# GeneralBot

./: .env.example  .eslintrc.js  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION.md  README.md  SECURITY.md  assistant.py  cli.py  config.py  design.md  docker-compose.yml  document_processor.py  examples.py  jest.config.json  llm_manager.py  logger.py  main.py  package.json  requirements.txt  setup.py  setup.sh  test_api.py  test_integration.py  tsconfig.json  vector_store.py
.github/workflows/: ci-cd.yml
data/: README.md
data/documents/: company_knowledge.md  technical_docs.md
data/embeddings/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: README.md
frontend/: README.md
scripts/: setup.sh
src/: README.md
src/api/: README.md
src/services/: HLD.md  README.md  plan.md
src/services/rag_mvp/: COSTS.md  HOW_IT_WORKS.md  NEXT_STEPS.md  README.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md
src/services/rag_mvp/src/: rag_pipeline.py  test_env.py  test_rag.py
src/services/rag_techniques/: HOW_RAG_TECHNIQUES_WORK_TOGETHER.md  README.md  __init__.py  requirements.txt  setup.py
src/services/rag_techniques/core/: __init__.py  base.py  config.py  simple_rag.py
src/services/rag_techniques/evaluation/: __init__.py  metrics.py
src/services/rag_techniques/examples/: example_usage.py  examples_advanced.py  examples_all_27.py  examples_comprehensive.py  examples_latest.py  pyproject.toml
src/services/rag_techniques/techniques/: __init__.py  adaptive.py  agentic_rag.py  compression.py  contextual_headers.py  crag.py  dartboard.py  document_augmentation.py  feedback.py  fusion.py  graph_rag.py  hierarchical.py  hyde.py  multimodal_captioning.py  multimodal_colpali.py  proposition_chunking.py  query_transform.py  raptor.py  reliable_rag.py  reranking.py  self_rag.py  semantic_chunking.py
src/services/rag_techniques/utils/: __init__.py  helpers.py
tests/: README.md
